--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_tts: ^3.7.0
   vibration: ^1.7.7
+  url_launcher: ^6.1.11
+  external_app_launcher: ^3.1.0
 
 dev_dependencies:
   flutter_test:
