--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   external_app_launcher: ^3.1.0
   flutter_phone_direct_caller: ^2.1.1
   geolocator: ^9.0.2
-  sms_advanced: ^1.0.2
+  speech_to_text: ^6.1.1
 
 dev_dependencies:
   flutter_test:
