--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,16 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   geolocator: ^9.0.2
   speech_to_text: ^6.1.1
+  envied: ^0.3.0+3
+  dart_openai: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0+3
+  build_runner: ^2.4.4
 
 flutter:
   uses-material-design: true
