--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   speech_to_text: ^6.1.1
   envied: ^0.3.0+3
   dart_openai: ^2.0.1
+  flutter_beep: ^1.0.0
 
 dev_dependencies:
   flutter_test:
