--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   envied: ^0.3.0+3
   dart_openai: ^2.0.1
   flutter_beep: ^1.0.0
+  mailer: ^6.0.1
 
 dev_dependencies:
   flutter_test:
