--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dart_openai: ^2.0.1
   flutter_beep: ^1.0.0
   mailer: ^6.0.1
+  flutter_email_sender: ^6.0.0
 
 dev_dependencies:
   flutter_test:
